--- a/query_parser/package.json
+++ b/query_parser/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mqtt": "^2.9.0"
   }
 }
