--- a/src/query_parser/package.json
+++ b/src/query_parser/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.5.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
+    "mocha": "^3.4.2",
     "mqtt": "^2.9.0"
   }
 }
